--- a/index.html
+++ b/index.html
@@ -144,24 +144,56 @@
                 <a class="c-btn c-btn--ghost" href="biography.html">اقرأ السيرة</a>
               </div>
 
-              <div class="c-hero__stats" role="list" aria-label="ملخص سريع للأرشيف">
+              <div class="c-hero__stats" role="list" aria-label="ملخص سريع للأرشيف" data-stats>
                 <div class="c-stat" role="listitem">
-                  <span class="c-stat__num">+320</span>
-                  <span class="c-stat__label">صورة</span>
+                  <div class="c-stat__icon" aria-hidden="true">
+                    <i class="fa-regular fa-images"></i>
+                  </div>
+                  <div class="c-stat__body">
+                    <span class="c-stat__num">
+                      <span class="c-counter" data-count-to="320" data-prefix="+" data-suffix=""></span>
+                    </span>
+                    <span class="c-stat__label">صورة</span>
+                  </div>
                 </div>
+
                 <div class="c-stat" role="listitem">
-                  <span class="c-stat__num">+85</span>
-                  <span class="c-stat__label">فيديو</span>
+                  <div class="c-stat__icon" aria-hidden="true">
+                    <i class="fa-solid fa-circle-play"></i>
+                  </div>
+                  <div class="c-stat__body">
+                    <span class="c-stat__num">
+                      <span class="c-counter" data-count-to="85" data-prefix="+" data-suffix=""></span>
+                    </span>
+                    <span class="c-stat__label">فيديو</span>
+                  </div>
                 </div>
+
                 <div class="c-stat" role="listitem">
-                  <span class="c-stat__num">+40</span>
-                  <span class="c-stat__label">ريلز</span>
+                  <div class="c-stat__icon" aria-hidden="true">
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                  </div>
+                  <div class="c-stat__body">
+                    <span class="c-stat__num">
+                      <span class="c-counter" data-count-to="40" data-prefix="+" data-suffix=""></span>
+                    </span>
+                    <span class="c-stat__label">ريلز</span>
+                  </div>
                 </div>
+
                 <div class="c-stat" role="listitem">
-                  <span class="c-stat__num">+60</span>
-                  <span class="c-stat__label">صوتيات</span>
+                  <div class="c-stat__icon" aria-hidden="true">
+                    <i class="fa-solid fa-wave-square"></i>
+                  </div>
+                  <div class="c-stat__body">
+                    <span class="c-stat__num">
+                      <span class="c-counter" data-count-to="60" data-prefix="+" data-suffix=""></span>
+                    </span>
+                    <span class="c-stat__label">صوتيات</span>
+                  </div>
                 </div>
               </div>
+
             </div>
 
             <!-- Persona -->
